2007-08-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-get-file-structure): Make use
	of the directory part when checking for an existing entry, to
	handle files with same basename in different directories.

2007-08-16  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-header-font-size, ps-header-title-font-size)
	(ps-footer-font-size, ps-line-number-font-size, ps-line-spacing)
	(ps-paragraph-spacing): Docstring fix.

2007-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-resolve): New arg `safe'.
	(smerge-resolve-all, smerge-batch-resolve): New function.
	(smerge-refine): Make sure `diff' returns the expected result.
	(smerge-parsep-re): New const.
	(smerge-mode): Use it to adjust paragraph-separate.

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Correctly match / regexp matchers as first char on a line when
	fontifying only that line.

	* emacs-lisp/cl-macs.el (cl-transform-lambda): Preserve the match-data.

2007-08-16  Glenn Morris  <rgm@gnu.org>

	* ps-print.el (ps-font-size): Doc fix.

2007-08-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el: Don't fiddle with vc-handled-backend.
	(vc-bzr-registered): Don't redundantly protect against
	file-error.  Actually use the format-specific code.
	(vc-bzr-buffer-nonblank-p): Remove.
	(vc-bzr-status): Change `kindchange' -> `kindchanged'.

2007-08-15  Glenn Morris  <rgm@gnu.org>

	* mail/undigest.el (rmail-digest-parse-rfc1153sloppy): Be even
	sloppier, for the sake of GNU Mailman.
	(rmail-digest-rfc1153): Initialize `result' correctly.

2007-08-14  Glenn Morris  <rgm@gnu.org>

	* simple.el (bad-packages-alist): New constant.
	(bad-package-check): New function.  Together, these two add
	elements to `after-load-alist' to check for problematic external
	packages.
	* emulation/cua-base.el: Move CUA-mode check to `bad-packages-alist'.

2007-08-13  Stephen Leake  <stephen_leake@stephe-leake.org>
