@@ -1,3 +1,9 @@
+2007-08-17  Bob Rogers  <rogers-emacs@rgrjr.dyndns.org>  (tiny change)
+
+	* progmode/cperl-mode.el (cperl-look-at-leading-count)
+	(cperl-find-pods-heres): Fix an error when typing expressions like
+	`s{a}{b}'.
+
 2007-08-17  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/compile.el (compilation-get-file-structure): Make use
